syntax = "proto3";
package spcommons;

import "gogoproto/gogo.proto";

option (gogoproto.sizer_all) = true;
option (gogoproto.marshaler_all) = true;
option (gogoproto.unmarshaler_all) = true;

message CounterInfo {
  string name = 1;
  uint64 value = 2;
}

message CounterSnapshot {
	repeated CounterInfo info = 1;
}